apps/linux/echoserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
    cert-manager.io/acme-challenge-type: http01 
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    nginx.ingress.kubernetes.io/modsecurity-transaction-id: "$request_id"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecAuditLog /dev/stdout
      SecRule REQUEST_URI|ARGS|QUERY_STRING|REQUEST_HEADERS_NAMES|REQUEST_HEADERS \"@contains bingo\" \"id:100002,phase:1,t:lowercase,deny,status:403,msg:\'Attack Detected\'\"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - echoserver.babosbird.com
    secretName: tls-secret
  rules:
  - host: echoserver.babosbird.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echoserver
            port:
              number: 80
